--- a/index.html
+++ b/index.html
@@ -3,13 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JavaScript introduction</title>
+    <title>Document</title>
 </head>
 <body>
-    <div class="box">
-        Hi i am a box
-    </div>
-    <button>Submint</button>
     <script src="script.js"></script>
 </body>
 </html>
